--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
       </section>
     </main>
     <script src="data.js"></script>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> //disabled for Render_Starter -->
+    <script src="Render_Starter.js"></script>
   </body>
 </html>
